# stocks

./: .env.example  pyproject.toml
migrations/: env.py
migrations/versions/: 9adac19ef804_initial.py
src/: app.py  routes.py
src/config/: settings.py
src/db/: __init__.py  base.py  dependencies.py  models.py  services.py
src/schemas/: base.py  stock.py
