[tool.poetry]
name = "stocks"
version = "0.1.0"
description = ""
authors = ["Viktor Nikolaev <viktornicolaev1995@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^5.2.1"
beautifulsoup4 = "^4.12.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
